--- a/LiveDex/PokedexPage.xaml
+++ b/LiveDex/PokedexPage.xaml
@@ -57,25 +57,29 @@
                                         Width = "Auto" />
                                     <ColumnDefinition
                                         Width = "*" />
+                                    <ColumnDefinition
+                                        Width = "60" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition
-                                        Height = "*" />
-                                    <RowDefinition
-                                        Height = "*" />
+                                        Height = "60" />
                                 </Grid.RowDefinitions>
                                 <Image
-                                    Grid.Column  = "0"
+                                    x:Name       = "Pokeball"
+                                    Source       = "{Binding ObtainedSprite}"
+                                    WidthRequest = "60"
                                     Grid.Row     = "0"
-                                    Grid.RowSpan = "2"
-                                    Margin       = "5,0,0,0"
+                                    Grid.Column  = "0" />
+                                <Image
+                                    Grid.Column  = "2"
+                                    Grid.Row     = "0"
                                     Aspect       = "AspectFill"
-                                    WidthRequest = "45"
+                                    WidthRequest = "60"
                                     Source       = "{Binding Sprite}" />
                                 <StackLayout
                                     Grid.Column     = "1"
                                     Grid.Row        = "0"
-                                    Grid.ColumnSpan = "2"
+                                    VerticalOptions = "Center"
                                     Orientation     = "Horizontal">
                                     <Label
                                         Style = "{StaticResource labelStyle}"
@@ -84,21 +88,6 @@
                                         Style = "{StaticResource labelStyle}"
                                         Text  = "{Binding Name}" />
                                 </StackLayout>
-                                <!--<StackLayout
-                                    Grid.Column = "2"
-                                    Grid.Row    = "1"
-                                    Orientation = "Horizontal">
-                                    <Label
-                                        Style = "{StaticResource labelStyle}"
-                                        Text  = "{Binding Obtained, StringFormat='Caught: {0}'}" />
-                                </StackLayout>-->
-                                <Image
-                                    x:Name      = "Pokeball"
-                                    Source      = "pokeball.png"
-                                    HorizontalOptions="End"
-                                    Grid.Row    = "0"
-                                    Grid.RowSpan="2"
-                                    Grid.Column = "3" IsVisible="{Binding Obtained}" />
                             </Grid>
                         </ViewCell.View>
                     </ViewCell>
