--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -6,6 +6,7 @@
     xmlns:ios            = "clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
     ios:Page.UseSafeArea = "true"
     xmlns:local          = "clr-namespace:LiveDex.Models"
+    BackgroundColor      = "#990D11"
     x:Class              = "LiveDex.PokemonPage">
     <Page.Resources>
         <ResourceDictionary>
@@ -42,11 +43,11 @@
                     Grid.Row          = "0"
                     CornerRadius      = "10"
                     IsClippedToBounds = "true"
-                    BackgroundColor   = "#34393D"
+                    BackgroundColor   = "#DEDEDE"
                     Margin            = "10,10,10,5">
                     <Image
                         x:Name          = "pkmSprite"
-                        BackgroundColor = "#34393D"
+                        BackgroundColor = "#004665"
                         HeightRequest   = "250"
                         WidthRequest    = "250" />
                 </Frame>
@@ -71,11 +72,11 @@
                         x:Name      = "Type2"
                         IsEnabled   = "false"
                         Grid.Column = "2" />
-                     <ActivityIndicator
-                        Grid.Column = "1"
-                        x:Name      = "loadingIcon"
-                        HorizontalOptions="Center"
-                        Color       = "Red" />
+                    <ActivityIndicator
+                        Grid.Column       = "1"
+                        x:Name            = "loadingIcon"
+                        HorizontalOptions = "Center"
+                        Color             = "Red" />
                     <Label
                         Grid.Column       = "4"
                         Style             = "{StaticResource labelStyle}"
@@ -104,7 +105,6 @@
                         VerticalTextAlignment   = "Center"
                         FontAttributes          = "Bold"
                         TextColor               = "White" />
-                   
                     <ImageButton
                         x:Name      = "pokeBall"
                         Grid.Column = "4"
